# Renderer

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  imgui.ini  run.bat
lib/cglm/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  cglmConfig.cmake  cmake_install.cmake
lib/glad/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  glad.sln  glad.vcxproj  glad.vcxproj.filters
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
res/: debugDepth.frag  debugDepth.vert  directional.vert  lighting.frag  lighting.vert  shadowTexture.frag  shadowTexture.vert  texture.frag  texture.vert  vertex.vert
res/shaders/: debug.frag  depth.frag  fragment.frag  phong.frag  phong.vert
src/: main.c  state.h
src/components/: transform.h
src/game/: terrain.h
src/gfx/: camera.c  camera.h  cube.h  lighting.h  primitives.c  primitives.h  shader.c  shader.h  texture.c  texture.h  vao.c  vao.h
src/gfx/window/: window.h
src/util/: files.h  noise.h
src/window/: ui.h  window.h
